@@ -180,6 +180,42 @@ name|server
 operator|.
 name|timeline
 operator|.
+name|MemoryTimelineStore
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|yarn
+operator|.
+name|server
+operator|.
+name|timeline
+operator|.
+name|TimelineStore
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|yarn
+operator|.
+name|server
+operator|.
+name|timeline
+operator|.
 name|security
 operator|.
 name|TimelineAuthenticationFilterInitializer
@@ -232,19 +268,13 @@ specifier|public
 class|class
 name|TestApplicationHistoryServer
 block|{
-DECL|field|historyServer
-name|ApplicationHistoryServer
-name|historyServer
-init|=
-literal|null
-decl_stmt|;
 comment|// simple test init/start/stop ApplicationHistoryServer. Status should change.
 annotation|@
 name|Test
 argument_list|(
 name|timeout
 operator|=
-literal|50000
+literal|60000
 argument_list|)
 DECL|method|testStartStopServer ()
 specifier|public
@@ -254,12 +284,13 @@ parameter_list|()
 throws|throws
 name|Exception
 block|{
+name|ApplicationHistoryServer
 name|historyServer
-operator|=
+init|=
 operator|new
 name|ApplicationHistoryServer
 argument_list|()
-expr_stmt|;
+decl_stmt|;
 name|Configuration
 name|config
 init|=
@@ -267,6 +298,36 @@ operator|new
 name|YarnConfiguration
 argument_list|()
 decl_stmt|;
+name|config
+operator|.
+name|setClass
+argument_list|(
+name|YarnConfiguration
+operator|.
+name|TIMELINE_SERVICE_STORE
+argument_list|,
+name|MemoryTimelineStore
+operator|.
+name|class
+argument_list|,
+name|TimelineStore
+operator|.
+name|class
+argument_list|)
+expr_stmt|;
+name|config
+operator|.
+name|set
+argument_list|(
+name|YarnConfiguration
+operator|.
+name|TIMELINE_SERVICE_WEBAPP_ADDRESS
+argument_list|,
+literal|"localhost:0"
+argument_list|)
+expr_stmt|;
+try|try
+block|{
 name|historyServer
 operator|.
 name|init
@@ -374,6 +435,15 @@ argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
+finally|finally
+block|{
+name|historyServer
+operator|.
+name|stop
+argument_list|()
+expr_stmt|;
+block|}
+block|}
 comment|// test launch method
 annotation|@
 name|Test
@@ -395,8 +465,15 @@ operator|.
 name|disableSystemExit
 argument_list|()
 expr_stmt|;
+name|ApplicationHistoryServer
+name|historyServer
+init|=
+literal|null
+decl_stmt|;
 try|try
 block|{
+comment|// Not able to modify the config of this test case,
+comment|// but others have been customized to avoid conflicts
 name|historyServer
 operator|=
 name|ApplicationHistoryServer
@@ -437,18 +514,34 @@ name|fail
 argument_list|()
 expr_stmt|;
 block|}
+finally|finally
+block|{
+if|if
+condition|(
+name|historyServer
+operator|!=
+literal|null
+condition|)
+block|{
+name|historyServer
+operator|.
+name|stop
+argument_list|()
+expr_stmt|;
+block|}
+block|}
 block|}
 annotation|@
 name|Test
 argument_list|(
 name|timeout
 operator|=
-literal|50000
+literal|240000
 argument_list|)
-DECL|method|testFilteOverrides ()
+DECL|method|testFilterOverrides ()
 specifier|public
 name|void
-name|testFilteOverrides
+name|testFilterOverrides
 parameter_list|()
 throws|throws
 name|Exception
@@ -640,12 +733,13 @@ operator|.
 name|getValue
 argument_list|()
 decl_stmt|;
+name|ApplicationHistoryServer
 name|historyServer
-operator|=
+init|=
 operator|new
 name|ApplicationHistoryServer
 argument_list|()
-expr_stmt|;
+decl_stmt|;
 name|Configuration
 name|config
 init|=
@@ -653,6 +747,36 @@ operator|new
 name|YarnConfiguration
 argument_list|()
 decl_stmt|;
+name|config
+operator|.
+name|setClass
+argument_list|(
+name|YarnConfiguration
+operator|.
+name|TIMELINE_SERVICE_STORE
+argument_list|,
+name|MemoryTimelineStore
+operator|.
+name|class
+argument_list|,
+name|TimelineStore
+operator|.
+name|class
+argument_list|)
+expr_stmt|;
+name|config
+operator|.
+name|set
+argument_list|(
+name|YarnConfiguration
+operator|.
+name|TIMELINE_SERVICE_WEBAPP_ADDRESS
+argument_list|,
+literal|"localhost:0"
+argument_list|)
+expr_stmt|;
+try|try
+block|{
 name|config
 operator|.
 name|set
@@ -694,33 +818,15 @@ literal|"hadoop.http.filter.initializers"
 argument_list|)
 argument_list|)
 expr_stmt|;
-name|historyServer
-operator|.
-name|stop
-argument_list|()
-expr_stmt|;
 block|}
-block|}
-annotation|@
-name|After
-DECL|method|stop ()
-specifier|public
-name|void
-name|stop
-parameter_list|()
-block|{
-if|if
-condition|(
-name|historyServer
-operator|!=
-literal|null
-condition|)
+finally|finally
 block|{
 name|historyServer
 operator|.
 name|stop
 argument_list|()
 expr_stmt|;
+block|}
 block|}
 block|}
 block|}
